force-app/main/default/objects/ARM_MigrationAudit__c/ARM_MigrationAudit__c.object-meta.xml
<CustomObject>
    <label>ARM Migration Audit</label>
    <pluralLabel>ARM Migration Audits</pluralLabel>
    <description>Custom object for tracking migration audit logs. Each record represents a single asynchronous CPQ-to-ARM migration run, capturing status, timestamps, CPQ record scope, and any error messages.</description>
    <nameField>
        <label>Audit Number</label>
        <type>AutoNumber</type>
        <displayFormat>AUD-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>