force-app/main/default/objects/ARM_MigrationAudit__c/fields/CPQ_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Record_Id__c</fullName>
    <label>CPQ Record ID</label>
    <description>The 18-digit Salesforce ID of the primary CPQ source record that initiated this migration audit job.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>