force-app/main/default/objects/ARM_MigrationAudit__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <description>Contains JSON-formatted metadata about the migration event — includes source object API name, field mapping snapshot, and transformation parameters used during execution.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>