force-app/main/default/objects/ARM_MigrationAudit__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>Aggregated error details captured during the migration batch execution. Populated by DataTransformBatch.finish() on partial or full failure.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>