force-app/main/default/objects/ARM_MigrationAudit__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <label>Error Log</label>
    <description>Logs detailed error information in serialized format. Captures stack traces, failed record IDs, and DML exception details accumulated during batch or service execution.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>