force-app/main/default/objects/ARM_MigrationAudit__c/fields/Migration_End__c.field-meta.xml
<CustomField>
    <fullName>Migration_End__c</fullName>
    <label>Migration End</label>
    <description>DateTime stamp recorded by DataTransformBatch.finish() when the batch run completes (success or failure).</description>
    <type>DateTime</type>
</CustomField>