force-app/main/default/objects/ARM_MigrationAudit__c/fields/Migration_Start__c.field-meta.xml
<CustomField>
    <fullName>Migration_Start__c</fullName>
    <label>Migration Start</label>
    <description>DateTime stamp recorded when MigrationProcessHandler enqueues the migration job.</description>
    <type>DateTime</type>
</CustomField>